Fix display issues on mobile #334621
changelog: fixed

--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -54,6 +54,7 @@
         white-space: pre;
         word-wrap: normal;
         border-left: $border-style;
+        -webkit-text-size-adjust: 100%;
       }
 
       code {
@@ -65,7 +66,7 @@
     }
 
     .line-numbers {
-      padding: 10px;
+      padding: 10px 10px 10px 0px;
       text-align: right;
       float: left;
 
@@ -86,6 +87,11 @@
     }
   }
 
+  .file-actions {
+    flex-shrink: 0;
+    align-items: start;
+  }
+
   .file-title-flex-parent {
     display: flex;
     align-items: center;
@@ -98,6 +104,8 @@
     border-radius: $border-radius-default $border-radius-default 0 0;
 
     .file-header-content {
+      max-width: 75%;
+
       .file-title-name {
         font-weight: $gl-font-weight-bold;
       }
@@ -105,6 +113,7 @@
       .gitlab-embedded-snippets-title {
         text-decoration: none;
         color: $gl-text-color;
+        word-break: break-word;
 
         &:hover {
           text-decoration: underline;
